@@ -301,9 +301,9 @@ static int
 			     &needbind, &lowport, socktype);
    if (result != STAT_OK)  return STAT_NORETRY;
 
-   if (xioopts.logopt == 'm') {
+   if (xioparms.logopt == 'm') {
       Info("starting connect loop, switching to syslog");
-      diag_set('y', xioopts.syslogfac);  xioopts.logopt = 'y';
+      diag_set('y', xioparms.syslogfac);  xioparms.logopt = 'y';
    } else {
       Info("starting connect loop");
    }
@@ -524,7 +524,7 @@ static int
    }
 
 #if WITH_IP4 && WITH_IP6
-   pf = xioopts.default_ip=='6'?PF_INET6:PF_INET;
+   pf = xioparms.default_ip=='6'?PF_INET6:PF_INET;
 #elif WITH_IP6
    pf = PF_INET6;
 #else
